syntax = "proto3";

package hello_api.request;

message HelloRequest {
  ApiReqType api_req_type = 1;
  oneof request {
    AddUserRequest add_user_request = 2;
    GetUserNameRequest get_user_name_request = 3;
  }
}

enum ApiReqType {
  API_REQ_TYPE_UNSPECIFIED = 0;
  API_REQ_TYPE_GET_USER = 1;
  API_REQ_TYPE_ADD_USER = 2;
}

// Request message for adding user ID and name
message AddUserRequest {
  string user_id = 1;
  string user_name = 2;
}

// Request message for getting user name by ID
message GetUserNameRequest { string user_id = 1; }